--- a/_sass/custom/_cunstomcss.scss
+++ b/_sass/custom/_cunstomcss.scss
@@ -1,5 +1,6 @@
 /* ==========================================================================
-   Default skin
+   자체 커스텀한 부분
    ========================================================================== */
-
-// Intentionally left blank
+    .hide{
+        display:none;
+    }
