--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -299,12 +299,6 @@ body {
   text-transform: uppercase;
 }
 
-.page__meta-sep::before {
-  content: "\2022";
-  padding-left: 0.5em;
-  padding-right: 0.5em;
-}
-
 /*
    Page taxonomy
    ========================================================================== */
@@ -358,11 +352,11 @@ body {
 
 .taxonomy__title {
   margin-bottom: 0.5em;
-  color: $muted-text-color;
+  color: lighten($text-color, 60%);
 }
 
 .taxonomy__count {
-  color: $muted-text-color;
+  color: lighten($text-color, 50%);
 }
 
 .taxonomy__index {
@@ -395,11 +389,12 @@ body {
 .back-to-top {
   display: block;
   clear: both;
-  color: $muted-text-color;
+  color: lighten($text-color, 50%);
   font-size: 0.6em;
   text-transform: uppercase;
   text-align: right;
   text-decoration: none;
+  font-weight: bold;
 }
 
 /*
